# Tico-Engine

./: CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt  main.cpp
src/core/: CMakeLists.txt  audio.cpp  game.cpp  input.cpp  objects.cpp  renderer.cpp
src/core/include/: audio.h  game.h  input.h  renderer.h
src/engine/: data.cpp  data.h  game.h  input.cpp  objects.h  renderer.h
src/engine/utils/: singleton.h
src/music-maker/: CMakeLists.txt  main.cpp  music_maker.cpp
src/music-maker/include/: music_maker.h
src/tetris/: CMakeLists.txt  blocks.cpp  blocks.h  level.cpp  level.h  main.cpp  tetris_game.cpp
src/tetris/include/: blocks.h  level.h  tetris_game.h
